--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Log In</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
+{% extends 'base.html' %}
+{% block content %}
     <body>
         <fieldset>
             <legend>Log In</legend>
@@ -23,4 +15,4 @@
         
         <script src="" async defer></script>
     </body>
-</html>
+{% endblock %}
