--- a/templates/create.html
+++ b/templates/create.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1 style="width: 100%">{% block title %} Add a New User {% endblock %}</h1>
-    <form method="post">
+    <form method="post" class="form-create-account" >
         <p>
             <label for="username">Username</label>
             <input type="text" name="username"
