--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,6 @@
             .content {
                 margin: 5px;
                 width: 100%;
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
                 margin-bottom: 0;
             }
     
@@ -59,20 +56,27 @@
                 padding: 0;
                 position: absolute;
             }
+            .form-create-account {
+                background-color: rgb(49, 189, 189);
+                text-align: center;
+            }
         </style>
     </head>
     <body>
         <nav>
-            <a href="{{ url_for('index') }}">Talladega Blog Creator</a>
+            <a href="{{ url_for('index') }}">TBC</a>
             <a href="{{ url_for('create')}}">Create Account</a>
-            <a href="{{ url_for('login')}}">Log In</a>
+            <a href="{{ url_for('login') }}">Log In</a>
+            <a href="{{ url_for('logout') }}">Log Out</a>
         </nav>
         <div class="content">
             {% block content %} {% endblock %}
         </div>
         <footer class="footer">
-            <p>This blog creator is a unique project meant for me to get my hands on some technologies I have not used before including
-                Python for web development, Flask, and SQLAlchemy. I also gained practice with authentication, authorization, front-end development, and web apps in general.
+            <p>This blog creator is a unique project meant for me to get my hands on some technologies I have not used 
+                before including Python for web development, Flask, and SQLAlchemy. I also gained practice with 
+                authentication and authorization through Flask-Login as well as more experience in front-end development 
+                and web apps in general.
             </p>
         </footer>
         <script src="" async defer></script>
